--- a/scrap/build.gradle
+++ b/scrap/build.gradle
@@ -1,18 +1,26 @@
 apply plugin: 'android'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.2"
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -29,6 +37,15 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.5.1'
     compile 'com.squareup.picasso:picasso:2.2.0'
     compile 'com.squareup.okhttp:okhttp:1.5.4'
-    compile 'com.google.inject:guice:3.0:no_aop'
-    compile 'org.roboguice:roboguice:1.1'
+    compile 'com.squareup:otto:1.3.5'
+
+    compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+
+    //    compile 'com.google.inject:guice:3.0:no_aop'
+    //    compile 'org.roboguice:roboguice:1.1'
+
+    //compile 'javax.annotation:jsr250-api:1.0'
+    compile 'com.squareup.dagger:dagger:1.2.1'
+    apt 'com.squareup.dagger:dagger-compiler:1.2.1'
+    //provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 }
