--- a/scrap/build.gradle
+++ b/scrap/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'android'
-apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 19
@@ -38,14 +37,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.2.0'
     compile 'com.squareup.okhttp:okhttp:1.5.4'
     compile 'com.squareup:otto:1.3.5'
-
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
-
-    //    compile 'com.google.inject:guice:3.0:no_aop'
-    //    compile 'org.roboguice:roboguice:1.1'
-
-    //compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.squareup.dagger:dagger:1.2.1'
-    apt 'com.squareup.dagger:dagger-compiler:1.2.1'
-    //provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.google.inject:guice:3.0:no_aop'
 }
