--- a/scrap/build.gradle
+++ b/scrap/build.gradle
@@ -3,12 +3,18 @@ apply plugin: 'android'
 android {
     compileSdkVersion 19
     buildToolsVersion "19.1.0"
+    testBuildType "debug"
 
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+
+        testApplicationId "com.hawa.scrap.test"
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+        testHandleProfiling true
+        testFunctionalTest true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -38,5 +44,10 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:1.5.4'
     compile 'com.squareup:otto:1.3.5'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+
+    compile 'org.scribe:scribe:1.3.5'
+
     compile 'com.google.inject:guice:3.0:no_aop'
+    androidTestCompile 'org.mockito:mockito-core:1.10.8'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1'
 }
